--- a/index.html
+++ b/index.html
@@ -1,42 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Hello World!</title>
-    <script>
-var fs = require('fs');
-var Client = require('node-kubernetes-client');
+<html data-ng-app="kuiApp">
+<head>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <!--[if lt IE 9]>
+    <script src="lib/html5shiv.min.js"></script>
+    <script src="lib/respond.min.js"></script>
+    <![endif]-->
 
-var client = new Client({
-    host:  '127.0.0.1:8080',
-    protocol: 'http',
-    version: 'v1',
-    token: ''
-});
-    </script>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    We are using node.js 
-   <script>
-  var pods, podId;
+    <script src="lib/angular.min.js"></script>
+    <script src="lib/angular-resource.min.js"></script>
+    <script src="lib/angular-route.min.js"></script>
+    <script src="lib/jquery.min.js"></script>
+    <script src="lib/bootstrap.js"></script>
+    <script src="lib/bootstrap.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/router/routes.js"></script>
+    <script src="js/controllers/controller.js"></script>
 
-  client.pods.getBy({"namespace": "default"}, function (err, podsArr) {
-    if (!err) {
-      console.log('pods: ' + JSON.stringify(podsArr));
-      pods = podsArr.items;
-      document.write(JSON.stringify(podsArr));
-      // output results
-      fs.writeFile("results/pods.json", JSON.stringify(podsArr, null, 4), function(err) {
-        if(err) {
-          console.log(err);
-        }
-        console.log("The file was saved!");
-      });
-    } else {
-      document.write("toto")
-    }
-  });
-      document.write(process.version)
-   </script>
-  </body>
+    <title>Manage Kubernetes</title>
+
+</head>
+
+<body class="container" >
+
+<div data-ng-include src="header.html"></div>
+
+<div id="container">
+    <div data-ng-view=""></div>
+</div>
+
+
+</body>
 </html>
