--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
     <!--[if lt IE 9]>
-    <script src="lib/html5shiv.min.js"></script>
-    <script src="lib/respond.min.js"></script>
+    <script src="js/lib/html5shiv.min.js"></script>
+    <script src="js/lib/respond.min.js"></script>
     <![endif]-->
 
-    <script src="lib/angular.min.js"></script>
-    <script src="lib/angular-resource.min.js"></script>
-    <script src="lib/angular-route.min.js"></script>
-    <script src="lib/jquery.min.js"></script>
-    <script src="lib/bootstrap.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
+    <script src="js/lib/angular.min.js"></script>
+    <script src="js/lib/angular-resource.min.js"></script>
+    <script src="js/lib/angular-route.min.js"></script>
+    <script src="js/lib/jquery.min.js"></script>
+    <script src="js/lib/bootstrap.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/router/routes.js"></script>
     <script src="js/controllers/controller.js"></script>
@@ -23,14 +23,11 @@
 
 </head>
 
-<body class="container" >
-
-<div data-ng-include src="header.html"></div>
-
-<div id="container">
-    <div data-ng-view=""></div>
-</div>
-
-
+<body class="container" data-ng-controller="kuiController">
+    <div data-ng-include src="headerSrc"></div>
+    <div id="container">
+        <div data-ng-view=""></div>
+    </div>
 </body>
+
 </html>
