Refactor/Optimize code flow. k8s/ includes resource controller and view.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <script src="js/app.js"></script>
     <script src="js/router/routes.js"></script>
     <script src="js/controllers/controller.js"></script>
+    <script src="js/controllers/k8s/podcontroller.js"></script>
+    <script src="js/controllers/k8s/servicecontroller.js"></script>
+    <script src="js/controllers/k8s/rccontroller.js"></script>
 
     <title>Manage Kubernetes</title>
 
