--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="js/app.js"></script>
     <script src="js/router/routes.js"></script>
     <script src="js/controllers/controller.js"></script>
+    <script src="js/controllers/services.js"></script>
     <script src="js/controllers/k8s/podcontroller.js"></script>
     <script src="js/controllers/k8s/servicecontroller.js"></script>
     <script src="js/controllers/k8s/rccontroller.js"></script>
