Redesign for Tags Management.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="js/lib/angular-touch.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/router/routes.js"></script>
+    <script src="js/util/labelformat.js"></script>
     <script src="js/controllers/controller.js"></script>
     <script src="js/controllers/services.js"></script>
     <script src="js/controllers/k8s/podcontroller.js"></script>
