Sidebar + navbar (no frame window) + buttons

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <body class="container" data-ng-controller="kuiController">
     <div ng-include src="headerSrc"></div>
-    <div id="container">
+    <div id="container" data-ng-class="{sidebarOpen:sidebarOpen}">
         <div ng-view=""></div>
     </div>
 </body>
