Showing store tree

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/ng-table.min.css" rel="stylesheet">
+    <link href="css/angular-tree-view.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
 
 
@@ -31,6 +32,8 @@
     <script src="js/lib/angular-route.min.js"></script>
     <script src="js/lib/ng-table.min.js"></script>
     <script src="js/lib/angular-touch.min.js"></script>
+    <script src="js/lib/angular-treeview-directive.min.js"></script>
+
     <script src="js/app.js"></script>
     <script src="js/router/routes.js"></script>
     <script src="js/util/labelformat.js"></script>
