--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src="js/lib/angular-route.min.js"></script>
     <script src="js/lib/ng-table.min.js"></script>
     <script src="js/lib/angular-touch.min.js"></script>
-    <script src="js/lib/angular-treeview-directive.min.js"></script>
+    <script src="js/lib/angular-treeview-directive.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/router/routes.js"></script>
