--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <script src="js/controllers/k8s/podcontroller.js"></script>
     <script src="js/controllers/k8s/servicecontroller.js"></script>
     <script src="js/controllers/k8s/rccontroller.js"></script>
+    <script src="js/controllers/k8s/machinecontroller.js"></script>
     <script src="js/controllers/k8s/storecontroller.js"></script>
 
     <title>Manage Kubernetes</title>
