Clean up CSS, improve sidebar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <link href="css/ng-table.min.css" rel="stylesheet">
     <link href="css/angular-tree-view.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
-
+    <link href="css/navbar.css" rel="stylesheet">
+    <link href="css/sidebar.css" rel="stylesheet">
 
     <script src="js/lib/jquery.min.js"></script>
     <script src="js/lib/bootstrap.js"></script>
@@ -45,7 +46,7 @@
     <script src="js/controllers/k8s/machinecontroller.js"></script>
     <script src="js/controllers/k8s/storecontroller.js"></script>
 
-    <title>Manage Kubernetes</title>
+    <title>Skippbox</title>
 
 </head>
 
