--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="js/lib/angular-touch.min.js"></script>
     <script src="js/lib/angular-treeview-directive.js"></script>
 
+    <script src="node_modules/nw-dev/lib/dev.js"></script>
     <script src="js/app.js"></script>
     <script src="js/router/routes.js"></script>
     <script src="js/util/labelformat.js"></script>
@@ -52,9 +53,7 @@
 
 <body class="container" data-ng-controller="kuiController">
     <div ng-include src="headerSrc"></div>
-    <div id="container" data-ng-class="{sidebarOpen:sidebarOpen}">
-        <div ng-view=""></div>
-    </div>
+    <div ng-view=""></div>
 </body>
 
 </html>
