Clean Create X form

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link href="css/app.css" rel="stylesheet">
     <link href="css/navbar.css" rel="stylesheet">
     <link href="css/sidebar.css" rel="stylesheet">
+    <link href="css/form.css" rel="stylesheet">
 
     <script src="js/lib/jquery.min.js"></script>
     <script src="js/lib/bootstrap.js"></script>
