Endpoints as a grid

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link href="css/navbar.css" rel="stylesheet">
     <link href="css/sidebar.css" rel="stylesheet">
     <link href="css/form.css" rel="stylesheet">
+    <link href="css/context.css" rel="stylesheet">
 
     <script src="js/lib/jquery.min.js"></script>
     <script src="js/lib/bootstrap.js"></script>
