Update Store view

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
 </head>
 
-<body class="container" data-ng-controller="kuiController">
-    <div ng-include src="headerSrc"></div>
-    <div ng-view=""></div>
+<body data-ng-controller="kuiController">
+  <div ng-include src="headerSrc"></div>
+  <div ng-view="" class="view"></div>
 </body>
 
 </html>
